# phototags

./: .gitignore  README.md  main.py  pyproject.toml
src/phototags/: __init__.py  config.py  main.py  metadata.py  mllm.py  scan.py  thumbnail.py
tests/: __init__.py  test_phototags.py
